<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.app.moviecatalogue.presentation.ui.home.fragment.movie.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.app.moviecatalogue.presentation.ui.home.fragment.tvshow.TvShowFragment"
        android:label="@string/tvshow"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.moviecatalogue.favorite.FavoriteFragment"
        android:label="@string/favorite" />
</navigation>